updated gulp to v4; really fixed promoted link overlapping

--- a/scss/new.scss
+++ b/scss/new.scss
@@ -2165,7 +2165,7 @@ $color_inv_blockquoteBorder 	: invert($color_blockquoteBorder);
 	.organic-listing {
 		background-color: white !important;
 		padding: 0;
-		z-index: 8999;
+		z-index: 1;
 		position: relative;
 		margin-bottom: 0px;
 		margin-right: 316px;
